--- a/inst/How-to-use-this-package.Rmd
+++ b/inst/How-to-use-this-package.Rmd
@@ -19,13 +19,13 @@ ls(pos=2)
 We now test the package using test.R contents.
 ```{r}
 
-RNASEQDATA<-read.csv(file="data/RNASEQDATA.csv",header=TRUE)
-RPPADATA<-read.csv(file="data/RPPADATA.original.csv",header=TRUE)
+RNASEQDATA<-read.csv(file="../data/RNASEQDATA.csv",header=TRUE)
+RPPADATA<-read.csv(file="../data/RPPADATA.original.csv",header=TRUE)
 EvaluationExperimentSet<-RNASEQDATA
 #EvaluationExperimentSet<-rbind(RNASEQDATA,RANDOMSET)
 ReferenceSet<-RPPADATA
 Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Merged.options<-merge.tag.options(Workflow.Data)
+Merged.options<-merge_tag_options(Workflow.Data)
 Model.quality.object<-Model.quality.list(Merged.options)
 Model.Quality<-Workflow.Criterion(Model.quality.object)
 Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
