--- a/inst/How-to-use-this-package.Rmd
+++ b/inst/How-to-use-this-package.Rmd
@@ -8,6 +8,8 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(EUFLOW)
+options(stringsAsFactors = FALSE)
+
 ```
 
 The contents of this package are:
@@ -27,7 +29,7 @@ ReferenceSet<-RPPADATA
 Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
 Merged.options<-merge_tag_options(Workflow.Data)
 Model.quality.object<-Model.quality.list(Merged.options)
-Model.Quality<-Workflow.Criterion(Model.quality.object)
+Model.Quality<-EUFLOW:::Workflow.Criterion(Model.quality.object)
 Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
 Workflow.Evaluation.table(Posterior.dataframe)
 Workflow.Evaluation.table(Posterior.dataframe,deltaPlus = 2)
