--- a/inst/How-to-use-this-package.Rmd
+++ b/inst/How-to-use-this-package.Rmd
@@ -23,16 +23,16 @@ We now test the package using test.R contents.
 
 RNASEQDATA<-read.csv(file="../data/RNASEQDATA.csv",header=TRUE)
 RPPADATA<-read.csv(file="../data/RPPADATA.original.csv",header=TRUE)
-#RANDOMSET<-read.csv(file="../data/RANDOMSET.csv",header=TRUE)
-#EvaluationExperimentSet<-RNASEQDATA
-EvaluationExperimentSet<-rbind(RNASEQDATA,RANDOMSET)
+#EvaluationExperimentSet<-read.csv(file="../data/EvaluationExperimentSet.csv",header=TRUE)
+EvaluationExperimentSet<-RNASEQDATA
+#EvaluationExperimentSet<-rbind(RNASEQDATA,RANDOMSET)
 ReferenceSet<-RPPADATA
-Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Merged.options<-merge_tag_options(Workflow.Data)
+Workflow.Data<-EUFLOW:::WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
+Merged.options<-EUFLOW:::merge_tag_options(Workflow.Data)
 Model.quality.object<-Model.quality.list(Merged.options)
 Model.Quality<-EUFLOW:::Workflow.Criterion(Model.quality.object)
 Posterior.dataframe<-EUFLOW:::Workflow.posteriorestimate(Model.quality.object,Model.Quality)
-Workflow.Evaluation.table(Posterior.dataframe)
+EUFLOW:::Workflow.Evaluation.table(Posterior.dataframe)
 Workflow.Evaluation.table(Posterior.dataframe,deltaPlus = 2)
 Workflow.Evaluation.table(Posterior.dataframe,Utp=3)
 Workflow.Evaluation.table(Posterior.dataframe,Utp=1)
