--- a/inst/How-to-use-this-package.Rmd
+++ b/inst/How-to-use-this-package.Rmd
@@ -1,8 +1,9 @@
 ---
-title: "Untitled"
+title: "EUFLOW:"
+subtitle: "Expected Utility Workflow Evaluation Package"
 author: "Kevin K. McDade"
-date: "August 31, 2016"
-output: pdf_document
+date: "September 9, 2016"
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -11,19 +12,35 @@ library(EUFLOW)
 options(stringsAsFactors = FALSE)
 
 ```
+### I.Introduction
+
+The data in bioinformatics is often in some “raw” form which is not the intended analysis goal. Processing of this data often involves a multistep process which to as a workflow, pipeline, or protocol.  One major obstacle to data reproducibility is workflows are rarely identical and the differences between workflow steps may not be the optimal way to process the data. We define a workflow here as a series of steps that a user takes to arrive at the analysis goal. The magnitude of the path choices can be considered to be a great benefit to the analyst, however, it is often the case that the user does not know which path to take.   
+
+In regards to bioinformatics workflow options can include ready-to-go data (a finished data set), custom workflows (user decides what steps to take), or use of a tuning parameter (i.e. requiring a certain level of data quality).  Any change in a workflow step or change of a parameter setting constitutes a new workflow option.  To what extent do these choices affect the final dataset to be analyzed? If the datasets differ substantially, will they differ in quality? If so, how can we tell which is best?  Finally, will soundness of the scientific conclusions be harmed by worse workflow options? Surprisingly little is known.  
+
+
+
 
 The contents of this package are:
 ```{r}
 search() 
+
+```
+
+```{r}
 ls(pos=2)
 ```
 
 We now test the package using test.R contents.
 ```{r}
-
 RNASEQDATA<-read.csv(file="../data/RNASEQDATA.csv",header=TRUE)
+RNASEQDATA[1:9,1:5]
+```
+
+```{r}
 RPPADATA<-read.csv(file="../data/RPPADATA.original.csv",header=TRUE)
-#EvaluationExperimentSet<-read.csv(file="../data/EvaluationExperimentSet.csv",header=TRUE)
+#EvaluationExperimentSet<-read.csv(file="../data/RNASEQ_PLUS_RANDOM.csv",header=TRUE)
+#EvaluationExperimentSet[,2:200]
 EvaluationExperimentSet<-RNASEQDATA
 #EvaluationExperimentSet<-rbind(RNASEQDATA,RANDOMSET)
 ReferenceSet<-RPPADATA
