Adding function PlotEvaluationTable

--- a/vignettes/How-to-use-the-EUFLOW-package.Rmd
+++ b/vignettes/How-to-use-the-EUFLOW-package.Rmd
@@ -110,8 +110,10 @@ Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quali
 ```
 
 ```{r}
-Workflow.Evaluation.table(Posterior.dataframe)
+Evaluation.table<-Workflow.Evaluation.table(Posterior.dataframe)
 Workflow.Evaluation.table(Posterior.dataframe,deltaPlus = 2)
 Workflow.Evaluation.table(Posterior.dataframe,Utp=3)
 Workflow.Evaluation.table(Posterior.dataframe,Utp=1)
+PlotEvaluationTable(Evaluation.table)
 ```
+
