--- a/vignettes/How-to-use-the-EUFLOW-package.Rmd
+++ b/vignettes/How-to-use-the-EUFLOW-package.Rmd
@@ -55,6 +55,11 @@ RNASEQDATA[1:9,1:5]
 RNASEQDATA[68:77,1:5]
 ```
 
+```{r}
+data(EvaluationExperimentSet2)
+dim(EvaluationExperimentSet2)
+```
+
 In the second data file we will use TCGA protein expression data on the samples. As above we will output only a subset. Alos note that as this is the reference dataset in this example only one identifier is represented rather than multiple workflow options.   
 ```{r}
 data(RPPADATA.original)
