PICCOLO DATA Executes in vigette

--- a/vignettes/How-to-use-the-EUFLOW-package.Rmd
+++ b/vignettes/How-to-use-the-EUFLOW-package.Rmd
@@ -54,10 +54,11 @@ data(RNASEQDATA)
 RNASEQDATA[1:9,1:5]
 RNASEQDATA[68:77,1:5]
 dim(RNASEQDATA)
-data(OVCancerFeatureCountsDATA)
-OVPICCOLO<-log2(OVCancerFeatureCountsDATA)
-OVPICCOLO[1:9,1:5]
-dim(OVPICCOLO)
+data(RNASEQV1v2PICCOLO)
+#OVPICCOLO<-log2(OVCancerFeatureCountsDATA)
+#OVPICCOLO[1:9,1:5]
+RNASEQV1v2PICCOLO[1:9,1:5]
+
 ```
 
 
@@ -73,7 +74,8 @@ We now have all that is required to run the EUFLOW package. For the purpose of c
 
 ```{r}
 
-EvaluationExperimentSet<-RNASEQDATA
+#EvaluationExperimentSet<-RNASEQDATA
+EvaluationExperimentSet<-RNASEQV1v2PICCOLO
 ReferenceSet<-RPPADATA
 ```
 
@@ -125,51 +127,8 @@ Workflow.Evaluation.table(Posterior.dataframe,deltaPlus = 2)
 Workflow.Evaluation.table(Posterior.dataframe,Utp=3)
 Workflow.Evaluation.table(Posterior.dataframe,Utp=1)
 PlotEvaluationTable(Evaluation.table)
+
+#RNASEQDATAv1$X<-paste(sapply(strsplit(as.character(RNASEQDATAv1$X),"_"), "[", 1),"v3",sep="_")
 ```
 
-```{r}
 
-RNASEQDATAv1<-RNASEQDATA[1:67,]
-dim(RNASEQDATAv1)
-
-RNASEQDATAv1$X<-paste(sapply(strsplit(as.character(RNASEQDATAv1$X),"_"), "[", 1),"v3",sep="_")
-RNASEQtest<-rbind(RNASEQDATA,RNASEQDATAv1)
-RNASEQtest[1:9,1:5]
-dim(RNASEQtest)
-```
-```{r}
-
-EvaluationExperimentSet<-RNASEQtest
-ReferenceSet<-RPPADATA
-```
-
-```{r}
-Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Workflow.Data[[1]][1:9,1:5]
-Merged.options<-merge_tag_options(Workflow.Data)
-Merged.options[1:9,1:5]
-dim(Merged.options)
-```
-
-```{r}
-Model.quality.object<-Model.quality.list(Merged.options)
-
-```
-```{r}
-Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
-head(as.data.frame(Model.Quality))
-```
-```{r}
-Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
-
-```
-
-```{r}
-Evaluation.table<-Workflow.Evaluation.table(Posterior.dataframe)
-Evaluation.table
-Workflow.Evaluation.table(Posterior.dataframe,deltaPlus = 2)
-Workflow.Evaluation.table(Posterior.dataframe,Utp=3)
-Workflow.Evaluation.table(Posterior.dataframe,Utp=1)
-PlotEvaluationTable(Evaluation.table)
-```
-#test
