repair of make.workflow.map id-filtering documentation

--- a/vignettes/How-to-use-the-EUFLOW-package.Rmd
+++ b/vignettes/How-to-use-the-EUFLOW-package.Rmd
@@ -151,6 +151,16 @@ Merged.options[1:9,1:5]
 dim(Merged.options)
 names(Merged.options)
 row.names(Merged.options)
-```
 
+Model.quality.object<-Model.quality.list(Merged.options)
+Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
+head(as.data.frame(Model.Quality))
+Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
+Evaluation.table<-Workflow.Evaluation.table(Posterior.dataframe)
+Evaluation.table
+Workflow.Evaluation.table(Posterior.dataframe,deltaPlus = 2)
+Workflow.Evaluation.table(Posterior.dataframe,Utp=3)
+Workflow.Evaluation.table(Posterior.dataframe,Utp=1)
+PlotEvaluationTable(Evaluation.table)
+```
 
